k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ansible-vault
  labels:
    name: ansible-vault
    app: ansible-vault-web
